<resources>
    <string name="app_name">nucleus.</string>
    <string name="hello_world">Hello world!</string>
    <string name="stats">Usage Stats</string>
    <string name="theme">Dark Theme</string>
    <string name="gallery">Gallery</string>
    <string name="cmprsdImg">Compressed Images</string>
    <string name="rcvdImg">Received Images</string>
    <string name="location">Change Download Location</string>
    <string name="about">About Us</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="create">Create Group</string>
    <string name="join">Join Group</string>
    <string name="camera">Camera</string>
    <string name="settings">Nucleus Settings</string>
    <string name="group_name">GROUP NAME</string>
    <string name="password">PASSWORD</string>
    <string name="enter_pass">******</string>
    <string name="confirm_pass">CONFIRM PASSWORD</string>

    <!--WiFi Direct String Values-->

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Click Discover.</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

    <!-- Compression String Values-->
    <string name="action_settings">Settings</string>
    <string name="click_image">Click Image</string>
    <string name="from_gallery">From Gallery</string>
    <string name="image_content">Image</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
</resources>

