<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:amdroid="http://schemas.android.com/tools">

    <item android:title="Folders">
        <menu>
            <group
                android:id="@+id/folders"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/navGallery"
                    android:checked="false"
                    android:icon="@drawable/ic_collections_black_24dp"
                    android:title="@string/gallery" />
                <item
                    android:id="@+id/navCompressed"
                    android:checked="false"
                    android:icon="@drawable/ic_vertical_align_center_black_24dp"
                    android:title="@string/cmprsdImg" />
                <item
                    android:id="@+id/navReceived"
                    android:checked="false"
                    android:icon="@drawable/ic_inbox_black_24dp"
                    android:title="@string/rcvdImg" />
            </group>
        </menu>
    </item>
    <item android:title="Nucleus Settings">
        <menu>
            <group
                android:id="@+id/group_settings"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/theme"
                    android:icon="@drawable/ic_invert_colors_black_24dp"
                    android:title="Dark Theme"
                    app:actionLayout="@layout/action_view_switch" />
                <item
                    android:id="@+id/location"
                    android:checked="false"
                    android:icon="@drawable/ic_get_app_black_24dp"
                    android:title="@string/location" />

                <item
                    android:id="@+id/about"
                    android:checked="false"
                    android:icon="@drawable/ic_info_outline_black_24dp"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
</menu>