<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="31dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/label_me"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical" />

    <!-- Self information -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:padding="3dip">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="2dp"
            android:src="@drawable/machine" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_name"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/my_status"
                android:layout_width="236dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/label_peers"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical" />

    <!-- Available peers -->
    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/empty_message"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp" />
</LinearLayout>
